# robot1

./: .gitignore  README.md
robot1/src/joint_serial_node/: CMakeLists.txt  package.xml
robot1/src/joint_serial_node/src/: joint_keyboard_control.cpp  joint_to_serial.cpp
robot1/src/my_robot_bringup/: CMakeLists.txt  package.xml
robot1/src/my_robot_bringup/config/: ros2_controllers.yaml
robot1/src/my_robot_bringup/launch/: my_robot.launch.py  my_robot.launch.xml  my_robot_fixed.launch.py
robot1/src/my_robot_moveit_config/: .setup_assistant  package.xml
robot1/src/my_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robot1.ros2_control.xacro  robot1.srdf  robot1.urdf.xacro  ros2_controllers.yaml
robot1/src/my_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot1/src/robot1_description/: CMakeLists.txt  package.xml  setup.py
robot1/src/robot1_description/config/: controllers.yaml  joint_names_robot.yaml  servo.yaml
robot1/src/robot1_description/launch/: display.launch.py  display.launch.py.backup  display.launch.xml  gaze.launch.py  servo_absolute.launch.py
robot1/src/robot1_description/meshes/: base_link.STL  link1.STL  link3.STL  link6.STL
robot1/src/robot1_description/robot1_description/: robot1_joint_control.py
robot1/src/robot1_description/rviz/: urdf_config.rviz
robot1/src/robot1_description/scripts/: robot1_absolute_control_basic.py  robot1_advanced_control.py  robot1_continuous_control.py  robot1_fixed_control.py  robot1_highspeed_control.py  robot1_ultra_highspeed_control.py
robot1/src/robot1_description/srdf/: robot1.srdf
robot1/src/robot1_description/urdf/: common_properties.xacro  gripper.xacro  my_robot.urdf.xacro  my_robot_original.urdf  robot.csv  robot1.gazebo.xacro  robot1.ros2_control.xacro  robot1.urdf.xacro
